<resources>
    <string name="app_name">TravelBankApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="merchant_label">Merchant</string>
    <string name="total_label">Total</string>
    <string name="date_label">Date</string>
    <string name="category_label">Category</string>
    <string name="description_hint">Description (optional)</string>
    <string name="toolbar_title_expenses">Expenses</string>
    <string name="no_internet_connection_text">No Internet Connection</string>
    <string name="dollar">$</string>
</resources>