<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ExpenseDetails.ExpenseDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/app_bar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnCross"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageButton
                            android:id="@+id/btnCross"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@color/white"
                            android:src="@drawable/baseline_arrow_back_black_24dp" />
                        <Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:title="Expense Details" />
                    </LinearLayout>


                </com.google.android.material.appbar.AppBarLayout>
            </LinearLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".40" />

            <TextView
                android:id="@+id/merchant_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/merchant_label"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llHeader" />

            <TextView
                android:id="@+id/merchantTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:maxLines="3"
                android:text="@{expense.merchantTitle}"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/attachment_preview"
                app:layout_constraintStart_toStartOf="@+id/merchant_label"
                app:layout_constraintTop_toBottomOf="@id/merchant_label"
                tools:text="Lunch" />

            <ImageView
                android:id="@+id/attachment_preview"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/img_background"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/merchantTitle"
                app:layout_constraintEnd_toEndOf="@id/currency"
                app:layout_constraintTop_toTopOf="@id/merchantTitle"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/backgrounds/scenic" />

            <View
                android:id="@+id/merchant_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/merchantTitle"
                app:layout_constraintTop_toBottomOf="@id/merchantTitle" />

            <TextView
                android:id="@+id/expense_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/total_label"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/merchant_underline"
                app:layout_constraintTop_toBottomOf="@id/merchant_underline" />

            <TextView
                android:id="@+id/expenseAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/attachment_preview"
                app:layout_constraintStart_toStartOf="@+id/expense_label"
                app:layout_constraintTop_toBottomOf="@id/expense_label"
                tools:text="$20.00" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_outline"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:textColor="@color/light_blue"
                app:layout_constraintBottom_toBottomOf="@id/expenseAmount"
                app:layout_constraintEnd_toEndOf="@+id/merchant_underline"
                app:layout_constraintTop_toTopOf="@id/expenseAmount"
                tools:text="EUR" />

            <View
                android:id="@+id/amount_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="@+id/currency"
                app:layout_constraintStart_toStartOf="@+id/expenseAmount"
                app:layout_constraintTop_toBottomOf="@id/expenseAmount" />

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/date_label"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/amount_underline"
                app:layout_constraintTop_toBottomOf="@id/amount_underline" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/center_guideline"
                app:layout_constraintStart_toStartOf="@+id/amount_underline"
                app:layout_constraintTop_toBottomOf="@id/date_label"
                tools:text="Jul 13, 2021" />

            <View
                android:id="@+id/date_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toStartOf="@id/center_guideline"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@id/date" />

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/category_label"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/amount_underline" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/category_arrow"
                app:layout_constraintStart_toEndOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/date_label"
                tools:text="Meals" />

            <ImageView
                android:id="@+id/category_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_right_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/category"
                app:layout_constraintEnd_toEndOf="@+id/amount_underline"
                app:layout_constraintTop_toTopOf="@id/category"
                app:tint="@color/light_grey"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/category_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="@+id/category_arrow"
                app:layout_constraintStart_toEndOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:foregroundGravity="top"
                app:cardBackgroundColor="@color/lighter_grey"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/category_underline"
                app:layout_constraintStart_toStartOf="@id/date_underline"
                app:layout_constraintTop_toBottomOf="@id/category_underline">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:background="@null"
                    android:gravity="top|start"
                    android:hint="@string/description_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>